2010-09-16  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-encodings.c (g_mime_encoding_quoted_encode_close):
	If the last input character is not a \n, append an "=\n" sequence.

2010-09-13  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-charset.c: Mark known_iconv_charsets[] as
	static. Also mark string members of various private structs as
	const.

2010-09-06  Jeffrey Stedfast  <fejj@novell.com>

	* configure.ac: Bump glib version requirement for
	g_set_error_literal().

2010-09-02  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/internet-address.c (group_to_string): Don't crash if the
	group name is unset. Thanks to Damian Pietras for this patch.

2010-09-01  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-utils.c (g_mime_utils_header_decode_phrase):
	Implement the same rfc2047-workaround hack as the one found in
	g_mime_utils_header_decode_text().

	* gmime/gmime-encodings.c (g_mime_encoding_base64_decode_step):
	Need to keep state to keep track of the number of ='s we've backed
	out over in case it crosses buffer boundaries.

2010-08-30  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-param.c (decode_token): Make less strict in order to
	handle unquoted boundary values containing '=' (and other illegal
	characters).

2010-08-26  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/internet-address.c (_internet_address_set_name): Don't
	decode/unquote the name. The docs for all the functions that call
	this assume the name string is in its decoded form already.
	(_internet_address_decode_name): New internal function that
	decodes a string and sets it as the name on the InternetAddress.
	(decode_address): Rewritten to be even more liberal in what it
	accepts.

2010-06-20  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-multipart-encrypted.c (g_mime_multipart_encrypted_decrypt):
	Don't unref the encrypted content mime part object when the
	content-type doesn't match application/octet-stream,